--- a/msa_back/manager_msa/templates/base.html
+++ b/msa_back/manager_msa/templates/base.html
@@ -16,7 +16,7 @@
 </head>
 <body class="bg-dark">
     <header>
-        <nav class="navbar navbar-expand-lg bg-dark-subtle fixed-top" data-bs-theme="dark">
+        <nav class="navbar navbar-expand-lg bg-dark-subtle" data-bs-theme="dark">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#">MSA Videos</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
