--- a/msa_back/manager_msa/templates/Auth/login.html
+++ b/msa_back/manager_msa/templates/Auth/login.html
@@ -4,13 +4,11 @@
 {% block title %}Welcome{% endblock %}
 
 {% block content %}
+    <div class="z-1 position-absolute shadow-img "></div>
+    <img src="{% static 'img/loki.jpg' %}" alt="" class="z-0 rounded position-absolute img">
     <div class="container">
-        <div class="mt-5 text-white row d-flex gap-3">
-            <div class="col-md">
-                <img src="{% static 'img/loki.jpg' %}" alt="" class="rounded z-0 position-absolute" style="height: 30rem; width: 50rem;"> 
-                <div class="z-1 position-absolute " style="background-image: radial-gradient(ellipse at center, rgba(0, 0, 0, 0) 0%, #212529 100%); height: 30rem; width: 50rem;"></div>
-            </div> 
-            <div class="col-md bg-light z-2 p-3 rounded-3 text-black row">
+        <div class="mt-5 position-relative">
+            <div class="bg-light z-2 position-absolute end-0 p-3 rounded-3 text-black row">
                 <h2 class="text-center">Login</h2>
                 <form action="" method="POST">
                     <div class="form-group mb-3 col-md">
@@ -24,10 +22,31 @@
                     <p class="text-primary mt-1">Esqueci minha senha</p>
                     <div class="col-md text-center d-grid gap-2">
                         <button type="submit" class="btn btn-primary mt-3">Login</button>
-                        <p>Não tem uma conta? <a class="link-primary"><b>Registre-se</b></a></p>
+                        <p>Não tem uma conta? <a class="nav-link link-primary" href="#"><b>Registre-se</b></a></p>
                     </div>
                 </form>
             </div>
         </div>
     </div>
+    <style>
+        .img {
+            height: 50rem;
+            max-height: 90%;
+            width: 85rem;
+            max-width: 80%;
+            object-fit: cover;
+            object-position: right;
+        }
+
+        .shadow-img{
+            height: 50rem;
+            max-height: 90%;
+            width: 85rem;
+            max-width: 80%;
+            background-image: radial-gradient(ellipse at center, rgba(0, 0, 0, 0) 0%, rgba(53, 53, 53, 0) 15%, #212529 100%);
+            box-shadow: inset -100px -80px 100px #212529, 100px 0px 100px #212529;
+            object-fit: cover;
+            object-position: right;
+        }
+    </style>
 {% endblock %}
