Arrumando posição do form de login

--- a/msa_back/manager_msa/templates/Auth/login.html
+++ b/msa_back/manager_msa/templates/Auth/login.html
@@ -4,11 +4,13 @@
 {% block title %}Welcome{% endblock %}
 
 {% block content %}
-    <div class="z-1 position-absolute shadow-img "></div>
-    <img src="{% static 'img/loki.jpg' %}" alt="" class="z-0 rounded position-absolute img">
+    <div>
+        <div class="z-1 position-absolute shadow-img "></div>
+        <img src="{% static 'img/loki.jpg' %}" alt="" class="z-0 rounded position-absolute img">
+    </div>
     <div class="container">
-        <div class="mt-5 position-relative">
-            <div class="bg-light z-2 position-absolute end-0 p-3 rounded-3 text-black row">
+        <div class="position-relative">
+            <div class="bg-light z-2 position-absolute end-0 p-3 rounded-3 text-black row form-login">
                 <h2 class="text-center">Login</h2>
                 <form action="" method="POST">
                     <div class="form-group mb-3 col-md">
@@ -29,6 +31,7 @@
         </div>
     </div>
     <style>
+        
         .img {
             height: 50rem;
             max-height: 90%;
@@ -44,9 +47,14 @@
             width: 85rem;
             max-width: 80%;
             background-image: radial-gradient(ellipse at center, rgba(0, 0, 0, 0) 0%, rgba(53, 53, 53, 0) 15%, #212529 100%);
-            box-shadow: inset -100px -80px 100px #212529, 100px 0px 100px #212529;
+            box-shadow: inset -100px -60px 100px #212529, 100px 0px 100px #212529, inset 0px 60px 100px #212529;
             object-fit: cover;
             object-position: right;
+        }
+
+        .form-login{
+            margin-top: 15vh; 
+            min-height: 30rem;
         }
     </style>
 {% endblock %}
