--- a/msa_back/manager_msa/templates/Auth/login.html
+++ b/msa_back/manager_msa/templates/Auth/login.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% load static %}
 
-{% block title %}Welcome{% endblock %}
+{% block title %}Login{% endblock %}
 
 {% block content %}
     <div>
@@ -13,6 +13,7 @@
             <div class="bg-light z-2 position-absolute end-0 p-3 rounded-3 text-black row form-login">
                 <h2 class="text-center">Login</h2>
                 <form action="" method="POST">
+                    {% csrf_token %}
                     <div class="form-group mb-3 col-md">
                         <label for="email">E-mail</label>
                         <input type="email" class="form-control" id="email" placeholder="E-mail">
@@ -24,7 +25,7 @@
                     <p class="text-primary mt-1">Esqueci minha senha</p>
                     <div class="col-md text-center d-grid gap-2">
                         <button type="submit" class="btn btn-primary mt-3">Login</button>
-                        <p>Não tem uma conta? <a class="nav-link link-primary" href="#"><b>Registre-se</b></a></p>
+                        <p>Não tem uma conta? <a class="nav-link link-primary" href="{% url 'register' %}"><b>Registre-se</b></a></p>
                     </div>
                 </form>
             </div>
