--- a/msa_back/manager_msa/templates/Auth/registro.html
+++ b/msa_back/manager_msa/templates/Auth/registro.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% load static %}
 
-{% block title %}Login{% endblock %}
+{% block title %}Cadastro{% endblock %}
 
 {% block content %}
 <div>
@@ -41,23 +41,23 @@
 <style>
     
     .img {
-        height: 50rem;
+        height: 70rem;
         max-height: 90%;
         width: 85rem;
-        max-width: 100%;
+        max-width: 80%;
         right: 34%;
         object-fit: cover;
         object-position: right;
     }
 
     .shadow-img{
-        height: 50rem;
+        height: 70rem;
         max-height: 90%;
         width: 85rem;
-        max-width: 100%;
+        max-width: 80%;
         right: 34%;
-        background-image: radial-gradient(linear at center, rgba(0, 0, 0, 0) 0%, rgba(53, 53, 53, 0) 15%, #212529 100%);
-        box-shadow: inset -90px -60px 100px #212529, 100px 0px 100px #212529, inset 0px 60px 100px #212529;
+        background-image: linear-gradient(90deg, rgba(255,255,255,0.05) 0%, rgba(88,88,88,0) 51,85%, #212529 100%);
+        box-shadow: inset -150px -60px 100px #212529, 100px 0px 100px #212529, inset 0px 60px 100px #212529;
         object-fit: cover;
         object-position: right;
     }
