--- a/msa_back/manager_msa/templates/Auth/registro.html
+++ b/msa_back/manager_msa/templates/Auth/registro.html
@@ -31,7 +31,7 @@
                     <input type="password" class="form-control" id="password-confirmed" placeholder="Senha de Confirmação">
                 </div>
                 <div class="col-md text-center d-grid gap-2">
-                    <button type="submit" class="btn btn-primary mt-3">Registrar</button>
+                    <button type="submit" class="btn btn-primary">Registrar</button>
                     <a class="nav-link link-primary" href="{% url 'login' %}"><b>Voltar</b></a>
                 </div>
             </form>
