--- a/msa_back/manager_msa/templates/Videos/main.html
+++ b/msa_back/manager_msa/templates/Videos/main.html
@@ -5,4 +5,168 @@
 
 {% block content %}
 
+<!-- Slider main container -->
+<div>
+    <div class="swiper mt-5">
+        <!-- Additional required wrapper -->
+        <div class="swiper-wrapper">
+            <!-- Slides -->
+            <div class="swiper-slide text-white"><img src="{% static 'img/gen-v.jpg' %}" alt=""></div>
+            <div class="swiper-slide text-white"><img src="{% static 'img/gen-v.jpg' %}" alt=""></div>
+            <div class="swiper-slide text-white"><img src="{% static 'img/gen-v.jpg' %}" alt=""></div>
+        </div>
+        <!-- If we need pagination -->
+        <div class="swiper-pagination"></div>
+    
+        <!-- If we need navigation buttons -->
+        <div class="swiper-button-prev"></div>
+        <div class="swiper-button-next"></div>
+    
+        <!-- If we need scrollbar
+        <div class="swiper-scrollbar"></div> -->
+    </div>
+
+    <div class="container mt-3">
+        <h2 class="text-white mb-3">Recomendações para você</h2>
+        <div class="row d-flex gap-5">
+            <div class="card col-md-2" style="width: 10rem; padding-inline: 0 !important; height: 295px;">
+                <div class="card-body" style="padding: 0.5rem !important;">
+                    <div class="d-flex justify-content-center mb-2">
+                        <img class="text-center" src="{% static 'img/solo-leveling.jpg' %}" alt="" style="width: 160px; height: 200px;">
+                    </div>
+                    <div class="d-flex justify-content-between">
+                        <div>
+                            <h6 class="card-subtitle mb-2 text-black">Solo Leveling</h6>
+                            <p class="card-text">00/00/0000</p>
+                        </div>
+                        <div class="rounded-circle bg-primary text-center position-relative" style="height: 50px; width: 50px;">
+                            <span class="position-absolute top-50 start-50 translate-middle badge fs-5 text-black">
+                                9.8
+                            </span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="card col-md-2" style="width: 10rem; padding-inline: 0 !important; height: 295px;">
+                <div class="card-body" style="padding: 0.5rem !important;">
+                    <div class="d-flex justify-content-center mb-2">
+                        <img class="text-center" src="{% static 'img/solo-leveling.jpg' %}" alt="" style="width: 160px; height: 200px;">
+                    </div>
+                    <div class="d-flex justify-content-between">
+                        <div>
+                            <h6 class="card-subtitle mb-2 text-black">Solo Leveling</h6>
+                            <p class="card-text">00/00/0000</p>
+                        </div>
+                        <div class="rounded-circle bg-primary text-center position-relative" style="height: 50px; width: 50px;">
+                            <span class="position-absolute top-50 start-50 translate-middle badge fs-5 text-black">
+                                9.8
+                            </span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="card col-md-2" style="width: 10rem; padding-inline: 0 !important; height: 295px;">
+                <div class="card-body" style="padding: 0.5rem !important;">
+                    <div class="d-flex justify-content-center mb-2">
+                        <img class="text-center" src="{% static 'img/solo-leveling.jpg' %}" alt="" style="width: 160px; height: 200px;">
+                    </div>
+                    <div class="d-flex justify-content-between">
+                        <div>
+                            <h6 class="card-subtitle mb-2 text-black">Solo Leveling</h6>
+                            <p class="card-text">00/00/0000</p>
+                        </div>
+                        <div class="rounded-circle bg-primary text-center position-relative" style="height: 50px; width: 50px;">
+                            <span class="position-absolute top-50 start-50 translate-middle badge fs-5 text-black">
+                                9.8
+                            </span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="card col-md-2" style="width: 10rem; padding-inline: 0 !important; height: 295px;">
+                <div class="card-body" style="padding: 0.5rem !important;">
+                    <div class="d-flex justify-content-center mb-2">
+                        <img class="text-center" src="{% static 'img/solo-leveling.jpg' %}" alt="" style="width: 160px; height: 200px;">
+                    </div>
+                    <div class="d-flex justify-content-between">
+                        <div>
+                            <h6 class="card-subtitle mb-2 text-black">Solo Leveling</h6>
+                            <p class="card-text">00/00/0000</p>
+                        </div>
+                        <div class="rounded-circle bg-primary text-center position-relative" style="height: 50px; width: 50px;">
+                            <span class="position-absolute top-50 start-50 translate-middle badge fs-5 text-black">
+                                9.8
+                            </span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="card col-md-2" style="width: 10rem; padding-inline: 0 !important; height: 295px;">
+                <div class="card-body" style="padding: 0.5rem !important;">
+                    <div class="d-flex justify-content-center mb-2">
+                        <img class="text-center" src="{% static 'img/solo-leveling.jpg' %}" alt="" style="width: 160px; height: 200px;">
+                    </div>
+                    <div class="d-flex justify-content-between">
+                        <div>
+                            <h6 class="card-subtitle mb-2 text-black">Solo Leveling</h6>
+                            <p class="card-text">00/00/0000</p>
+                        </div>
+                        <div class="rounded-circle bg-primary text-center position-relative" style="height: 50px; width: 50px;">
+                            <span class="position-absolute top-50 start-50 translate-middle badge fs-5 text-black">
+                                9.8
+                            </span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="card col-md-2" style="width: 10rem; padding-inline: 0 !important; height: 295px;">
+                <div class="card-body" style="padding: 0.5rem !important;">
+                    <div class="d-flex justify-content-center mb-2">
+                        <img class="text-center" src="{% static 'img/solo-leveling.jpg' %}" alt="" style="width: 160px; height: 200px;">
+                    </div>
+                    <div class="d-flex justify-content-between">
+                        <div>
+                            <h6 class="card-subtitle mb-2 text-black">Solo Leveling</h6>
+                            <p class="card-text">00/00/0000</p>
+                        </div>
+                        <div class="rounded-circle bg-primary text-center position-relative" style="height: 50px; width: 50px;">
+                            <span class="position-absolute top-50 start-50 translate-middle badge fs-5 text-black">
+                                9.8
+                            </span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<script type="module">
+    import Swiper from 'https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.mjs'
+  
+    const swiper = new Swiper('.swiper',{
+  // Optional parameters
+  direction: 'horizontal',
+  loop: true,
+  delay: 100,
+
+  // If we need pagination
+  pagination: {
+    el: '.swiper-pagination',
+  },
+
+  // Navigation arrows
+  navigation: {
+    nextEl: '.swiper-button-next',
+    prevEl: '.swiper-button-prev',
+  },
+})
+</script>
+<style>
+.swiper {
+  max-width: 100%;
+  max-height: 600px;
+  object-fit: fill;
+}
+</style>
 {% endblock %}
