--- a/msa_back/manager_msa/templates/Auth/registro.html
+++ b/msa_back/manager_msa/templates/Auth/registro.html
@@ -1,6 +1,8 @@
 {% extends "base.html" %}
 {% load static %}
 
+{% block styles %}<link rel="stylesheet" href="{% static 'css/registro.css'%}">{% endblock %}
+
 {% block title %}Cadastro{% endblock %}
 
 {% block content %}
@@ -10,13 +12,17 @@
 </div>
 <div class="container">
     <div class="position-relative">
-        <div class="bg-light z-2 position-absolute end-0 p-3 rounded-3 text-black row form-register">
+        <div class="bg-light z-2 position-absolute end-0 p-3 rounded-3 text-black row form">
             <h2 class="text-center">Cadastro</h2>
             <form action="" method="POST">
                 {% csrf_token %}
                 <div class="form-group mb-3 col-md">
-                    <label for="user">Nome de Usuário</label>
-                    <input type="text" class="form-control" id="user" placeholder="Nome de Usuário">
+                    <label for="name">Nome</label>
+                    <input type="text" class="form-control" id="name" placeholder="Nome">
+                </div>
+                <div class="form-group mb-3 col-md">
+                    <label for="lastname">Sobrenome</label>
+                    <input type="text" class="form-control" id="lastname" placeholder="Sobrenome">
                 </div>
                 <div class="form-group mb-3 col-md">
                     <label for="email">E-mail</label>
@@ -38,33 +44,4 @@
         </div>
     </div>
 </div>
-<style>
-    
-    .img {
-        height: 70rem;
-        max-height: 90%;
-        width: 85rem;
-        max-width: 80%;
-        right: 34%;
-        object-fit: cover;
-        object-position: right;
-    }
-
-    .shadow-img{
-        height: 70rem;
-        max-height: 90%;
-        width: 85rem;
-        max-width: 80%;
-        right: 34%;
-        background-image: linear-gradient(90deg, rgba(255,255,255,0.05) 0%, rgba(88,88,88,0) 51,85%, #212529 100%);
-        box-shadow: inset -150px -60px 100px #212529, 100px 0px 100px #212529, inset 0px 60px 100px #212529;
-        object-fit: cover;
-        object-position: right;
-    }
-
-    .form-register{
-        margin-top: 15vh; 
-        min-height: 30rem;
-    }
-</style>
 {% endblock %}
