--- a/msa_back/manager_msa/templates/Videos/main.html
+++ b/msa_back/manager_msa/templates/Videos/main.html
@@ -3,11 +3,13 @@
 
 {% block title %}Cadastro{% endblock %}
 
+{% block styles %}<link rel="stylesheet" href="{% static 'css/main.css'%}">{% endblock %}
+
 {% block content %}
 
 <!-- Slider main container -->
 <div>
-    <div class="swiper mb-3" style="margin-top: 2rem;">
+    <div class="swiper mb-3">
         <!-- Additional required wrapper -->
         <div class="swiper-wrapper">
             <!-- Slides -->
@@ -178,17 +180,4 @@
     },
 })
 </script>
-<style>
-.swiper {
-    max-width: 100%;
-    max-height: 600px;
-}
-.img {
-    max-width: 100%;
-    width: 1920px;
-    max-height: 600px;
-    object-fit: cover;
-    object-position: right;
-}
-</style>
 {% endblock %}
