--- a/msa_back/manager_msa/templates/base.html
+++ b/msa_back/manager_msa/templates/base.html
@@ -17,6 +17,8 @@
     SwiperJS
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+
+    <link rel="stylesheet" href="{% static 'css/style.css'%}">
 </head>
 <body class="bg-dark" style="min-height: 100vh;">
     <header>
