--- a/msa_back/manager_msa/templates/Videos/catalogo.html
+++ b/msa_back/manager_msa/templates/Videos/catalogo.html
@@ -6,36 +6,97 @@
 {% block title %}Cadastro{% endblock %}
 
 {% block content %}
-<div class="navigation">
-    <ul>
-        <li>
-            <a href="#">
-                <span class="title">MSA Videos</span>
-            </a>
-        </li>
-        <li>
-            <a href="#">
-                <span class="title">Series</span>
-            </a>
-        </li>
-        <li>
-            <a href="#">
-                <span class="title">Filmes</span>
-            </a>
-        </li>
-        <li>
-            <a href="#">
-                <span class="title">Animes</span>
-            </a>
-        </li>
-    </ul>
-    <!-- <div class="toggle"></div> -->
+<div>
+    <div class="container-sidebar">
+        <div class="navigation bg-dark">
+            <ul class="list-group">
+                <li>
+                    <a href="#">
+                        <!-- <span class="icon">
+                            <ion-icon name="logo-apple"></ion-icon>
+                        </span> -->
+                        <span class="title">Brand Name</span>
+                    </a>
+                </li>
+
+                <li>
+                    <a href="#">
+                        <span class="icon">
+                            <i class="fa-solid fa-film"></i>
+                        </span>
+                        <span class="title">Filmes</span>
+                    </a>
+                </li>
+
+                <li>
+                    <a href="#">
+                        <span class="icon">
+                            <i class="fa-solid fa-photo-film"></i>
+                        </span>
+                        <span class="title">Séries</span>
+                    </a>
+                </li>
+
+                <li>
+                    <a href="#">
+                        <span class="icon">
+                            <i class="fa-solid fa-person-rays"></i>
+                        </span>
+                        <span class="title">Animes</span>
+                    </a>
+                </li>
+
+                <li>
+                    <a href="#">
+                        <span class="icon">
+                            <i class="fa-solid fa-gear"></i>
+                        </span>
+                        <span class="title">Configurações</span>
+                    </a>
+                </li>
+
+                <!-- <li>
+                    <a href="#">
+                        <span class="icon">
+                            <ion-icon name="log-out-outline"></ion-icon>
+                        </span>
+                        <span class="title">Sign Out</span>
+                    </a>
+                </li> -->
+            </ul>
+        </div>
+    </div>
+    <!-- ========================= Main ==================== -->
+    <div class="container">
+        <div class="main">
+            <div class="topbar">
+                <div class="toggle">
+                    <i class="fa-solid fa-bars text-white" name="menu-outline"></i>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
-<!-- <script>
-    let navigation = document.querySelector('.navigation');
-    let toggle = document.querySelector('.toggle');
-    toggle.onclick = function(){
-        navigation.classList.toggle('active')
+<script>
+    let list = document.querySelectorAll(".navigation li");
+
+    function activeLink() {
+        list.forEach((item) => {
+        item.classList.remove("hovered");
+        });
+        this.classList.add("hovered");
     }
-</script> -->
+
+    list.forEach((item) => item.addEventListener("mouseover", activeLink));
+
+    // Menu Toggle
+    let toggle = document.querySelector(".toggle");
+    let navigation = document.querySelector(".navigation");
+    let main = document.querySelector(".main");
+
+    toggle.onclick = function () {
+        navigation.classList.toggle("active");
+        main.classList.toggle("active");
+    };
+</script>
 {% endblock %}
