Método de login e cadastro

--- a/msa_back/manager_msa/static/css/registro.css
+++ b/msa_back/manager_msa/static/css/registro.css
@@ -19,3 +19,11 @@
     object-fit: cover;
     object-position: right;
 }
+
+.errorlist > li {
+    margin: 0 !important;
+}
+
+.errorlist {
+    margin-block-end: 0 !important;
+}
