--- a/msa_back/manager_msa/templates/Videos/main.html
+++ b/msa_back/manager_msa/templates/Videos/main.html
@@ -13,9 +13,9 @@
         <!-- Additional required wrapper -->
         <div class="swiper-wrapper">
             <!-- Slides -->
-            <div class="swiper-slide text-white"><img src="{% static 'img/gen-v.jpg' %}" alt="" class="img"></div>
-            <div class="swiper-slide text-white"><img src="{% static 'img/gen-v.jpg' %}" alt="" class="img"></div>
-            <div class="swiper-slide text-white"><img src="{% static 'img/gen-v.jpg' %}" alt="" class="img"></div>
+            <div class="swiper-slide text-white"><img src="{% static 'img/gen-v.jpg' %}" alt="" class="img object-fit-md-cover"></div>
+            <div class="swiper-slide text-white"><img src="{% static 'img/gen-v.jpg' %}" alt="" class="img object-fit-md-cover"></div>
+            <div class="swiper-slide text-white"><img src="{% static 'img/gen-v.jpg' %}" alt="" class="img object-fit-md-cover"></div>
         </div>
         <!-- If we need pagination -->
         <div class="swiper-pagination"></div>
