--- a/msa_back/manager_msa/templates/Auth/login.html
+++ b/msa_back/manager_msa/templates/Auth/login.html
@@ -17,12 +17,16 @@
                 <form action="" method="POST">
                     {% csrf_token %}
                     <div class="form-group mb-3 col-md">
-                        <label for="email">E-mail</label>
-                        <input type="email" class="form-control" id="email" placeholder="E-mail">
+                        <label for="id_username">Usuário</label>
+                        <!-- <input type="text" class="form-control" id="user"> -->
+                        {{form_login.username}}
+                        <span class="text-danger">{{form_login.username.errors}}</span>
                     </div>
                     <div class="form-group col-md">
-                        <label for="password">Senha</label>
-                        <input type="password" class="form-control" id="password" placeholder="Senha">
+                        <label for="id_password">Senha</label>
+                        <!-- <input type="password" class="form-control" id="password"> -->
+                        {{form_login.password}}
+                        <span class="text-danger">{{form_login.password.errors}}</span>
                     </div>
                     <p class="text-primary mt-1">Esqueci minha senha</p>
                     <div class="col-md text-center d-grid gap-2">
@@ -33,4 +37,12 @@
             </div>
         </div>
     </div>
+
+    <script>
+        const inputUser = document.querySelector('#id_username');
+        inputUser.classList.add('form-control')
+
+        const inputPassword = document.querySelector('#id_password');
+        inputPassword.classList.add('form-control')
+    </script>
 {% endblock %}
