--- a/msa_back/manager_msa/templates/base.html
+++ b/msa_back/manager_msa/templates/base.html
@@ -29,26 +29,34 @@
                 <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav me-2 mb-2 mb-lg-0">
-                        <li class="nav-item">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <!-- <li class="nav-item">
                             <a class="nav-link active" aria-current="page" href="{% url 'welcome' %}">Home</a>
-                        </li>
-                    </ul>
-                    <ul class="navbar-nav me-2 mb-2 mb-lg-0">
+                        </li> -->
+                        
+                        {% if user.is_authenticated %}
                         <li class="nav-item">
                             <a class="nav-link active" aria-current="page" href="{% url 'main' %}">Inicio</a>
                         </li>
-                    </ul>
-                    <ul class="navbar-nav me-2 mb-2 mb-lg-0">
                         <li class="nav-item">
                             <a class="nav-link active" aria-current="page" href="{% url 'catalogo' %}">Catalogo Geral</a>
                         </li>
-                    </ul>
-                    <ul class="navbar-nav me-2 mb-2 mb-lg-0">
                         <li class="nav-item">
                             <a class="nav-link active" aria-current="page" href="{% url 'lista' %}">Listagem</a>
+                        </li> 
+                        {% endif %}
+                    </ul>
+                    {% if user.is_authenticated %}
+                    <span class="navbar-text text-white me-2">Olá {{ user.username }}</span>
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="{% url 'logout' %}">
+                                <i class="fa-solid fa-arrow-right-from-bracket"></i>
+                                Sair
+                            </a>
                         </li>
                     </ul>
+                    {% endif %}
                 </div>
             </div>
         </nav>
