Ajuste e novos comentários no Readme

--- a/msa_back/manager_msa/templates/Videos/main.html
+++ b/msa_back/manager_msa/templates/Videos/main.html
@@ -8,7 +8,7 @@
 {% block content %}
 
 <!-- Slider main container -->
-<div>
+<div class="container">
     <div class="swiper mb-3">
         <!-- Additional required wrapper -->
         <div class="swiper-wrapper">
