--- a/msa_back/manager_msa/static/css/main.css
+++ b/msa_back/manager_msa/static/css/main.css
@@ -1,11 +1,13 @@
 .swiper {
     max-width: 100%;
-    max-height: 600px;
+    min-height: 300px;
+    max-height: 500px;
 }
 
 .img {
     max-width: 100%;
     width: 1920px;
-    max-height: 600px;
-    object-position: right;
+    min-height: 300px;
+    max-height: 500px;
+    object-position: center;
 }
