--- a/msa_back/manager_msa/templates/Videos/catalogo.html
+++ b/msa_back/manager_msa/templates/Videos/catalogo.html
@@ -69,11 +69,11 @@
     <!-- ========================= Main ==================== -->
     <div class="container">
         <div class="main">
-            <div class="topbar">
+            <!-- <div class="topbar">
                 <div class="toggle">
                     <i class="fa-solid fa-bars text-white" name="menu-outline"></i>
                 </div>
-            </div>
+            </div> -->
         </div>
     </div>
 </div>
