Add aba de pesquisa

--- a/msa_back/manager_msa/templates/Videos/main.html
+++ b/msa_back/manager_msa/templates/Videos/main.html
@@ -88,13 +88,13 @@
                                         <div class="col-sm">
                                             <h6 class="card-subtitle text-black">{{video.name}}</h6>
                                         </div>
-                                        <div class="col-sm">
+                                        <!-- <div class="col-sm">
                                             <div class="rounded-circle bg-primary text-center position-relative float-end" style="height: 3rem; width: 3rem;">
                                                 <span class="position-absolute top-50 start-50 translate-middle badge fs-5 text-black">
                                                     {{ video.vote_average|floatformat:1 }}
                                                 </span>
                                             </div>
-                                        </div>
+                                        </div> -->
                                         <p class="card-text fs-6">{{ video.first_air_date  }}</p>
                                     </div>
                                     <a href="#" class="stretched-link"></a>
@@ -114,13 +114,13 @@
                                         <div class="col-sm">
                                             <h6 class="card-subtitle text-black">{{video.title}}</h6>
                                         </div>
-                                        <div class="col-sm">
+                                        <!-- <div class="col-sm">
                                             <div class="rounded-circle bg-primary text-center position-relative float-end" style="height: 3rem; width: 3rem;">
                                                 <span class="position-absolute top-50 start-50 translate-middle badge fs-5 text-black">
                                                     {{ video.vote_average|floatformat:1 }}
                                                 </span>
                                             </div>
-                                        </div>
+                                        </div> -->
                                         <p class="card-text fs-6">{{ video.release_date }}</p>
                                     </div>
                                     <a href="#" class="stretched-link"></a>
