--- a/msa_back/manager_msa/templates/base.html
+++ b/msa_back/manager_msa/templates/base.html
@@ -31,7 +31,7 @@
                 <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0 gap-2">
+                    <ul class="navbar-nav mx-auto mb-2 mb-lg-0 gap-2">
                         <!-- <li class="nav-item">
                             <a class="nav-link active" aria-current="page" href="{% url 'welcome' %}">Home</a>
                         </li> -->
@@ -41,6 +41,12 @@
                             <a class="nav-link active" aria-current="page" href="{% url 'main' %}">
                                 <i class="fa-solid fa-house me-1"></i>
                                 Inicio
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="#">
+                                <i class="fa-solid fa-search me-1"></i>
+                                Pesquisar
                             </a>
                         </li>
                         <li class="nav-item">
