--- a/msa_back/manager_msa/templates/Videos/main.html
+++ b/msa_back/manager_msa/templates/Videos/main.html
@@ -79,25 +79,36 @@
                 
                         {% if video.media_type == 'tv' %}
                         <div class="swiper-slide">
-                            <div class="card col-md-2" style="width: 11rem; padding-inline: 0 !important; height: 19rem;">
+                            <div class="card col-md-2" style="width: 11rem; padding-inline: 0 !important; height: 20rem;">
                                 <div class="card-body" style="padding: 0.5rem !important;">
                                     <div class="d-flex justify-content-center mb-2">
                                         <img class="text-center" src="https://www.themoviedb.org/t/p/w220_and_h330_face/{{video.poster_path}}" alt="" style="width: 11rem; height: 13rem;" data-swiper-parallax="-300">
                                     </div>
-                                    <div class="row align-middle">
-                                        <div class="col-sm">
+                                    <div class="align-middle">
+                                        <div class="mb-1">
                                             <h6 class="card-subtitle text-black">{{video.name}}</h6>
                                         </div>
-                                        <!-- <div class="col-sm">
-                                            <div class="rounded-circle bg-primary text-center position-relative float-end" style="height: 3rem; width: 3rem;">
-                                                <span class="position-absolute top-50 start-50 translate-middle badge fs-5 text-black">
-                                                    {{ video.vote_average|floatformat:1 }}
-                                                </span>
-                                            </div>
-                                        </div> -->
-                                        <p class="card-text fs-6">{{ video.first_air_date  }}</p>
+                                        <div class="d-flex justify-content-between align-items-end mt-auto">
+                                            <span class="card-text fs-6">{{ video.first_air_date }}</span>
+                                            {% if video.vote_average >= 7 %}
+                                            <span class="badge text-bg-success">
+                                                <i class="fa-solid fa-star me-1"></i>
+                                                {{ video.vote_average|floatformat:1 }}
+                                            </span>
+                                            {% elif video.vote_average >= 5 %}
+                                            <span class="badge text-bg-warning">
+                                                <i class="fa-solid fa-star me-1"></i>
+                                                {{ video.vote_average|floatformat:1 }}
+                                            </span>
+                                            {% else %}
+                                            <span class="badge text-bg-danger">
+                                                <i class="fa-solid fa-star me-1"></i>
+                                                {{ video.vote_average|floatformat:1 }}
+                                            </span>
+                                            {% endif %}
+                                        </div>
                                     </div>
-                                    <a href="#" class="stretched-link"></a>
+                                    <a href="{% url 'infos' video.id %}" class="stretched-link"></a>
                                 </div>
                             </div>
                         </div>
@@ -105,25 +116,36 @@
                         {% else %}
 
                         <div class="swiper-slide">
-                            <div class="card col-md-2" style="width: 11rem; padding-inline: 0 !important; height: 19rem;">
+                            <div class="card col-md-2" style="width: 11rem; padding-inline: 0 !important; height: 20rem;">
                                 <div class="card-body" style="padding: 0.5rem !important;">
                                     <div class="d-flex justify-content-center mb-2">
                                         <img class="text-center" src="https://www.themoviedb.org/t/p/w220_and_h330_face/{{video.poster_path}}" alt="" style="width: 11rem; height: 13rem;" data-swiper-parallax="-300">
                                     </div>
-                                    <div class="row">
-                                        <div class="col-sm">
+                                    <div class="align-middle">
+                                        <div class="mb-1">
                                             <h6 class="card-subtitle text-black">{{video.title}}</h6>
                                         </div>
-                                        <!-- <div class="col-sm">
-                                            <div class="rounded-circle bg-primary text-center position-relative float-end" style="height: 3rem; width: 3rem;">
-                                                <span class="position-absolute top-50 start-50 translate-middle badge fs-5 text-black">
-                                                    {{ video.vote_average|floatformat:1 }}
-                                                </span>
-                                            </div>
-                                        </div> -->
-                                        <p class="card-text fs-6">{{ video.release_date }}</p>
+                                        <div class="d-flex justify-content-between align-items-end mt-auto">
+                                            <span class="card-text fs-6">{{ video.release_date }}</span>
+                                            {% if video.vote_average >= 7 %}
+                                            <span class="badge text-bg-success">
+                                                <i class="fa-solid fa-star me-1"></i>
+                                                {{ video.vote_average|floatformat:1 }}
+                                            </span>
+                                            {% elif video.vote_average >= 5 %}
+                                            <span class="badge text-bg-warning">
+                                                <i class="fa-solid fa-star me-1"></i>
+                                                {{ video.vote_average|floatformat:1 }}
+                                            </span>
+                                            {% else %}
+                                            <span class="badge text-bg-danger">
+                                                <i class="fa-solid fa-star me-1"></i>
+                                                {{ video.vote_average|floatformat:1 }}
+                                            </span>
+                                            {% endif %}
+                                        </div>
                                     </div>
-                                    <a href="#" class="stretched-link"></a>
+                                    <a href="{% url 'infos' video.id %}" class="stretched-link"></a>
                                 </div>
                             </div>
                         </div>
@@ -134,35 +156,107 @@
                     <!-- If we need navigation buttons  -->
                     <div class="swiper-button-prev"></div>
                     <div class="swiper-button-next"></div>
+                    <!-- <div class="swiper-pagination"></div> -->
                 </div>
-                <div class="swiper-pagination"></div>
             </div>
-
-            <!-- <div class="card col-md-2" style="width: 10rem; padding-inline: 0 !important; height: 295px;">
-                <div class="card-body" style="padding: 0.5rem !important;">
-                    <div class="d-flex justify-content-center mb-2">
-                        <img class="text-center" src="{% static 'img/solo-leveling.jpg' %}" alt="" style="width: 160px; height: 200px;" data-swiper-parallax="-300"> 
-                    </div>
-                    <div class="d-flex justify-content-between">
-                        <div>
-                            <h6 class="card-subtitle mb-2 text-black">Solo Leveling</h6>
-                            <p class="card-text">00/00/0000</p>
-                        </div>
-                        <div class="rounded-circle bg-primary text-center position-relative" style="height: 50px; width: 50px;">
-                            <span class="position-absolute top-50 start-50 translate-middle badge fs-5 text-black">
-                                9.8
-                            </span>
-                        </div>
-                    </div>
-                    <a href="#" class="stretched-link"></a>
-                </div>
-            </div> -->
         </div>
 
 
         <h2 class="text-white mb-3">Filmes</h2>
+        <div class="mb-3">
+            <div class="swiper mySwiper">
+                <div class="swiper-wrapper">
+                    {% for movie in movies.results %}
+                    <div class="swiper-slide">
+                        <div class="card col-md-2" style="width: 11rem; padding-inline: 0 !important; height: 20rem;">
+                            <div class="card-body" style="padding: 0.5rem !important;">
+                                <div class="d-flex justify-content-center mb-2">
+                                    <img class="text-center" src="https://www.themoviedb.org/t/p/w220_and_h330_face/{{movie.poster_path}}" alt="" style="width: 11rem; height: 13rem;" data-swiper-parallax="-300">
+                                </div>
+                                <div class="align-middle">
+                                    <div class="mb-1">
+                                        <h6 class="card-subtitle text-black">{{movie.title}}</h6>
+                                    </div>
+                                    <div class="d-flex justify-content-between align-items-end mt-auto">
+                                        <span class="card-text fs-6">{{ movie.release_date }}</span>
+                                        {% if movie.vote_average >= 7 %}
+                                        <span class="badge text-bg-success">
+                                            <i class="fa-solid fa-star me-1"></i>
+                                            {{ movie.vote_average|floatformat:1 }}
+                                        </span>
+                                        {% elif movie.vote_average >= 5 %}
+                                        <span class="badge text-bg-warning">
+                                            <i class="fa-solid fa-star me-1"></i>
+                                            {{ movie.vote_average|floatformat:1 }}
+                                        </span>
+                                        {% else %}
+                                        <span class="badge text-bg-danger">
+                                            <i class="fa-solid fa-star me-1"></i>
+                                            {{ movie.vote_average|floatformat:1 }}
+                                        </span>
+                                        {% endif %}
+                                    </div>
+                                </div>
+                                <a href="{% url 'infos' movie.id %}" class="stretched-link"></a>
+                            </div>
+                        </div>
+                    </div>
+                    {% endfor %}
+                </div>
+                <!-- If we need navigation buttons  -->
+                <div class="swiper-button-prev"></div>
+                <div class="swiper-button-next"></div>
+                <!-- <div class="swiper-pagination"></div> -->
+            </div>
+        </div>
         <h2 class="text-white mb-3">Séries</h2>
-        <h2 class="text-white mb-3">Animes</h2>
+        <div class="mb-3">
+            <div class="swiper mySwiper">
+                <div class="swiper-wrapper">
+                    {% for serie in series.results %}
+                    <div class="swiper-slide">
+                        <div class="card col-md-2" style="width: 11rem; padding-inline: 0 !important; height: 20rem;">
+                            <div class="card-body" style="padding: 0.5rem !important;">
+                                <div class="d-flex justify-content-center mb-2">
+                                    <img class="text-center" src="https://www.themoviedb.org/t/p/w220_and_h330_face/{{serie.poster_path}}" alt="" style="width: 11rem; height: 13rem;" data-swiper-parallax="-300">
+                                </div>
+                                <div class="align-middle">
+                                    <div class="mb-1">
+                                        <h6 class="card-subtitle text-black">{{serie.name}}</h6>
+                                    </div>
+                                    <div class="d-flex justify-content-between align-items-end mt-auto">
+                                        <span class="card-text fs-6">{{ serie.first_air_date }}</span>
+                                        {% if serie.vote_average >= 7 %}
+                                        <span class="badge text-bg-success">
+                                            <i class="fa-solid fa-star me-1"></i>
+                                            {{ serie.vote_average|floatformat:1 }}
+                                        </span>
+                                        {% elif serie.vote_average >= 5 %}
+                                        <span class="badge text-bg-warning">
+                                            <i class="fa-solid fa-star me-1"></i>
+                                            {{ serie.vote_average|floatformat:1 }}
+                                        </span>
+                                        {% else %}
+                                        <span class="badge text-bg-danger">
+                                            <i class="fa-solid fa-star me-1"></i>
+                                            {{ serie.vote_average|floatformat:1 }}
+                                        </span>
+                                        {% endif %}
+                                    </div>
+                                </div>
+                                <a href="{% url 'infos' serie.id %}" class="stretched-link"></a>
+                            </div>
+                        </div>
+                    </div>
+                    {% endfor %}
+                </div>
+                <!-- If we need navigation buttons  -->
+                <!-- <div class="swiper-pagination"></div> -->
+                <div class="swiper-button-prev"></div>
+                <div class="swiper-button-next"></div>
+            </div>
+        </div>
+        <!-- <h2 class="text-white mb-3">Animes</h2> -->
     </div>
 </div>
 
@@ -198,7 +292,7 @@
 
     new bootstrap.Carousel(myCarouselElement, {
         interval: 3000,
-        touch: false
+        touch: true
     })
 
     var swiper = new Swiper(".mySwiper", {
@@ -207,7 +301,7 @@
       loop: true,
       pagination: {
         el: ".swiper-pagination",
-        clickable: true,
+        clickable: false,
       },
       navigation: {
         nextEl: '.swiper-button-next',
