--- a/msa_back/manager_msa/templates/Lista/lista.html
+++ b/msa_back/manager_msa/templates/Lista/lista.html
@@ -7,13 +7,14 @@
 <div class="container text-white mt-5">
     <h2 class="mb-3">Lista de Filmes</h2>
     <!-- {{list}} -->
-    <table class="table">
+    <table class="table text-center">
       <thead>
         <tr>
           <th scope="col">#</th>
-          <th scope="col">Titulo</th>
+          <th scope="col">Título</th>
           <th scope="col">Lançamento</th>
           <th scope="col">Gênero</th>
+          <th scope="col">Favorito</th>
           <th scope="col">Status</th>
           <th scope="col">Ações</th>
         </tr>
@@ -24,23 +25,24 @@
           <tr>
             <th scope="row">{{forloop.counter}}</th>
             <td>{{ l.title }}</td>
-            <td>{{l.release_date }}</td>
+            <td>{{ l.release_date }}</td>
             <td>
               {% for g  in l.genres %}
                 <span class="badge text-bg-secondary">{{ g.name }}</span>
               {% endfor %}
             </td>
+            <td><button class="btn"><i class="fa-regular fa-heart text-secondary"></i></button></td>
             <td>
               {% if l.status_watch %}
-                <span class="badge text-bg-success"><i class="fa-solid fa-thumbs-up fa-2x"></i></span>
+                <button class="btn btn-success" name="status-positive"><i class="fa-solid fa-thumbs-up"></i></button>
               {% else %}
-                <span class="badge text-bg-danger"><i class="fa-solid fa-thumbs-down fa-2x"></i></span>
+                <button class="btn btn-danger" name="status-negative"><i class="fa-solid fa-thumbs-down"></i></button>
               {% endif %}
             </td>
             <td>
-              <div class="d-flex gap-2">
-                <button type="submit" class="btn btn-primary"><i class="fa-solid fa-circle-info"></i></button>
-                <button class="btn btn-danger"><i class="fa-solid fa-trash-can"></i></button>
+              <div class="d-flex gap-2 justify-content-center">
+                <a class="btn btn-primary" href="{% url 'infos' l.id %}"><i class="fa-solid fa-circle-info"></i></a>
+                <button class="btn btn-danger" name="delete-video"><i class="fa-solid fa-trash-can"></i></button>
               </div>
             </td>
           </tr>
@@ -48,5 +50,44 @@
         
       </tbody>
     </table>
+
+    <!-- Paginação -->
+    <div class="d-flex justify-content-between">
+      <span>Página {{page_obj.number}} de {{ page_obj.paginator.num_pages }}</span>
+      <nav aria-label="Page navigation example">
+        <ul class="pagination">
+          {% if page_obj.has_previous %}
+            <li class="page-item"><a class="page-link" href="?page={{ page_obj.previous_page_number }}">Previous</a></li>
+            {% if page_obj.number > 3 %}
+              <li class="page-item"><a class="page-link" href="?page=1">1</a></li>
+              {% if page_obj.number > 4 %}
+                <li class="page-item"><a class="page-link" href="#">...</a></li>
+              {% endif %}  
+            {% endif %} 
+          {% endif %}
+
+          
+          {% for num in page_obj.paginator.page_range %}
+            {% if page_obj.number == num %}
+              <li class="page-item"><a class="page-link" href="?page={{num}}">{{num}}</a></li>
+            {% elif num > page_obj.number|add:'-3' and num < page_obj.number|add:'3' %}
+              <li class="page-item"><a class="page-link" href="?page={{num}}">{{num}}</a></li>
+            {% endif %}
+          {% endfor %}
+
+          
+          {% if page_obj.has_next %}
+            {% if page_obj.number < page_obj.paginator.num_pages|add:'-3' %}
+              <li class="page-item"><a class="page-link" href="#">...</a></li>
+              <li class="page-item"><a class="page-link" href="?page={{page_obj.paginator.num_pages}}">{{page_obj.paginator.num_pages}}</a></li>
+            {% elif page_obj.number < page_obj.paginator.num_pages|add:'-2' %}
+              <li class="page-item"><a class="page-link" href="?page={{page_obj.paginator.num_pages}}">{{page_obj.paginator.num_pages}}</a></li>
+            {% endif %}
+              <li class="page-item"><a class="page-link" href="?page={{ page_obj.next_page_number }}">Next</a></li>        
+          {% endif %}
+
+        </ul>
+      </nav>
+    </div>
 </div>
 {% endblock %}
